--- a/frontend/WebPedido/src/app/components/pedido/pedido-cadastro/pedido-cadastro.component.html
+++ b/frontend/WebPedido/src/app/components/pedido/pedido-cadastro/pedido-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-    <h2 class="mb-4">{{ id ? 'Edit' : 'Add' }} Item</h2>
+    <h2 class="mb-4">{{ id ? 'Alterar' : 'Novo' }} Pedido</h2>
     <form class="needs-validation" novalidate [formGroup]="form">
         <div class="mb-3">
             <label for="nomeCliente" class="form-label">Nome Cliente:</label>
